src/test/resources/frontendReference/invalid/syntaxErr/function/functionJunkAfterReturn.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 11:2 -- Function f is not ended with a return or an exit statement.
1 parser error(s) detected, no further compilation attempted.
